tests/sksl/errors/golden/FieldAfterRuntimeArray.glsl
### Compilation failed:

error: 1: arrays without an explicit size must use an initializer expression
1 error
